# aenimal-hackathon

./: .gitignore  configure.ac
src/: Adder.h  CircleImage.h  CircleImageNeighborFactory.h  CostFunction.h  CostHeuristic.h  DummyHeuristicRecorder.h  GreedyHeuristic.h  HeuristicRecorder.h  HeuristicSearcher.h  ImageDrawerCostFunction.h  InMemoryRecorder.cpp  InMemoryRecorder.h  Makefile.am  MonteCarloHeuristic.h  NeighborFactory.h  SimulatedAnnealingHeuristic.h  SimulatedAnnealingStatistics.cpp  SimulatedAnnealingStatistics.h  TestAdder.cpp  TestCircleImage.cpp  TestCircleImageNeighborFactory.cpp  TestGreedyHeuristic.cpp  TestHeuristicSearcher.cpp  TestImageDrawerCostFunction.cpp  TestInMemoryRecorder.cpp  TestIntegration.cpp  TestMonteCarloHeuristic  TestMonteCarloHeuristic.cpp  TestSimulatedAnnealingHeuristic.cpp  basic-test.cpp  display.cpp  helloworld.cpp  magick.cpp  run-circles.cpp  runci.cpp  save.cpp
